css change overlap of nav bar not fixing

--- a/booklist.css
+++ b/booklist.css
@@ -12,30 +12,6 @@
   box-sizing: border-box;
 }
 
-/* Style the submit button */
-form.example button {
-  float: left;
-  width: 20%;
-  padding: 10px;
-  background: #2196F3;
-  color: white;
-  font-size: 17px;
-  border: 1px solid grey;
-  border-left: none; /* Prevent double borders */
-  cursor: pointer;
-}
-
-form.example button:hover {
-  background: #0b7dda;
-}
-
-/* Clear floats */
-form.example::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-tr {
-  width : 400px;
+@media screen and (min-width: 768px) {
+  body { padding-top: 100px; }
 }
